--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ pytest~=7.4.4
 allure-pytest
 jsonschema~=4.21.1
 pydantic~=2.5.3
+pydantic-settings
 python-dotenv~=1.0.1
 selene~=2.0.0rc7
-selenium~=4.17.2
